# object-store

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config.toml  fs.config.toml  google_cloud.config.toml
.github/workflows/: build.yml  build_and_test.yml  release.yml
docs/: FEATURES.md  TRACING.md  UPGRADE.md
migrations/: 20210313211034_create_public_keys.sql  20210322152449_create_object.sql  20210322153010_create_object_public_key.sql  20210427222534_add_object_public_key_hash_index.sql  20210524153649_create_mailbox.sql  20210601131142_add_dime_uuid_to_object.sql  20210601160710_remove_signature_from_object_public_key.sql  20210607153304_md5_object_unique_hash_constraint.sql  20210625124203_add_second_pk_to_public_key.sql  20210625153541_create_object_replication.sql  20210625154904_create_object_replication_staging.sql  20210711220521_add_properties_to_object.sql  20211129141831_cleanup_public_key.sql  20211129141848_add_auth_public_key.sql  20260108111601_create_object_metadata_index.sql  20260108111602_create_object_public_key_index.sql  20260108111603_create_object_replicated_at_index.sql  20260108111604_create_object_replication_status_index.sql
proto/: admin.proto  dime.proto  mailbox.proto  object.proto  public_key.proto  util.proto
src/: authorization.rs  cache.rs  config.rs  consts.rs  datastore.rs  db.rs  domain.rs  lib.rs  mailbox.rs  main.rs  minitrace_grpc.rs  object.rs  proto_helpers.rs  public_key.rs  replication.rs  types.rs
src/admin/: mod.rs
src/dime/: aes.rs  dime.rs  error.rs  mod.rs
src/middleware/: logging_grpc.rs  minitrace_grpc.rs  mod.rs
src/replication/: client_cache.rs  error.rs  mod.rs  public_key.rs
src/server/: health.rs  mod.rs  trace.rs
src/storage/: error.rs  file_system.rs  google_cloud.rs  mod.rs  storage.rs
tests/: admin.rs  int_test.rs  mailbox.rs  mailbox_int_test.rs  object.rs  public_key.rs  replication.rs  sample_int_test.rs
tests/common/: client.rs  config.rs  containers.rs  data.rs  db.rs  mod.rs
