[package]
name = "object-store"
version = "1.0.0-alpha.4"
authors = ["Stephen Cirner <scirner@figure.com>"]
edition = "2024"

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
base64 = "0.22.1"
bytes = "1.0"
chrono = "0.4"
env_logger = "0.11.8"
fastrace = { version = "0.7", features = ["enable"] }
fastrace-macro = "0.7"
fastrace-datadog = "0.7"
futures = "0.3"
futures-util = "0.3"
google-cloud-gax = "1.4.0"
google-cloud-storage = "1.5.0"
hex = "0.4"
http = "1.0"
http-body = "1.0"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
log = "0.4"
minstant = "0.1.2"
percent-encoding = "2.2"
prost = "0.14"
prost-types = "0.14"
quick-error = "2.0"
rand = "0.9.2"
reqwest = { version = "0.12" }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-health = "0.14"
tower = "0.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] } # TODO verify features
tokio-stream = "0.1"
url = "2.3"
uuid = { version = "1", features = ["serde", "v4"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
testcontainers-modules = { version = "0.14", features = ["postgres"] }
tokio-stream = { version = "0.1", features=["net"] }
